Use THREE.js rendering

--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
       <input name="hideOptions" type="checkbox">
       <br>
       <button name="reset" style="display:none">Another one</button>
+      <button name="redraw" style="display:none">Redraw</button>
       <p class="hide-note">Hover over the corner of the screen to show controls.</p>
     </div>
     <div id="content" style="display:none">
+    </div>
+    <div id="draw-container">
+      <canvas id="draw-canvas"></canvas>
     </div>
     <script src="./bundle.js" charset="utf-8"></script>
   </body>
