Add effects and color schemes

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
       <select name="styleSelect">
         <option value="venturis">Venturis</option>
         <option value="weyland-yutani">Weyland-Yutani</option>
+        <option value="delos">Delos</option>
+        <option value="cyberdyne">Cyberdyne</option>
+        <option value="tyrell">Tyrell</option>
+      </select>
+      <br>
+      <label>Aesthetic:</label>
+      <select name="aestheticSelect">
+        <option value="sadboy">Internet Sadboy</option>
+        <option value="gibson">Gibson</option>
+        <option value="scorchedtube">Scorched Tube</option>
+        <option value="badlifechoices">Bad Life Choices</option>
+        <option value="ntef">1984</option>
       </select>
       <br>
       <label>Font size:</label>
