Style improvements, some code cleanup

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button type="submit">Go</button>
     </form>
     <div id="loading" style="display:none">
-      <p>Loading...</p>
+      <p>Working...</p>
     </div>
     <div id="error" style="display:none">
       <p>Sorry, something went wrong: <span id="error-msg"></span></p>
