Add github link and photosensitive seizure warning

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       <label for="url">Type in the URL of a file in a Github repository:</label>
       <input name="url" type="url" pattern="^https?://github.com/.+">
       <button type="submit">Go</button>
+      <p><a href="https://github.com/sequitur/codewall">View on Github</a></p>
+      <p><em>Some visual effects may trigger photosensitive seizures.</em></p>
     </form>
     <div id="loading" style="display:none">
       <p>Working...</p>
