add query string permalinks

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <button name="reset" style="display:none">Another one</button>
       <button name="redraw" style="display:none">Redraw</button>
       <p class="hide-note">Hover over the corner of the screen to show controls.</p>
+      <p id="permalink"></p>
     </div>
     <div id="content" style="display:none">
     </div>
