--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button type="submit">Go</button>
       <p><a href="https://github.com/sequitur/codewall">View on Github</a></p>
       <p><em>Some visual effects may trigger photosensitive seizures.</em></p>
+      <p><em>Brought to you by <a href="https://www.patreon.com/brunodias">Patreon</a> supporters.</em></p>
     </form>
     <div id="loading" style="display:none">
       <p>Working...</p>
